--- a/app/src/main/res/layout/fragment_sample2.xml
+++ b/app/src/main/res/layout/fragment_sample2.xml
@@ -31,7 +31,7 @@
                 android:paddingBottom="64dp">
 
                 <TextView
-                    android:id="@+id/textView13"
+                    android:id="@+id/text_home_displayname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -50,9 +50,9 @@
                     android:layout_marginEnd="16dp"
                     android:padding="16dp"
                     android:tint="@android:color/white"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
+                    app:layout_constraintBottom_toBottomOf="@+id/text_home_displayname"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textView13"
+                    app:layout_constraintTop_toTopOf="@+id/text_home_displayname"
                     app:srcCompat="@drawable/ic_settings" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -282,34 +282,34 @@
         app:layout_dodgeInsetEdges="bottom">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_with_wifi"
+            android:id="@+id/layout_with_wifi_temp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/button_logout"
                 android:layout_width="125dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/capsule_button"
                 android:backgroundTint="@color/colorThemeBlue"
                 android:foreground="@drawable/ripple_bg_button"
                 android:text="logout"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button3"
+                app:layout_constraintEnd_toStartOf="@+id/button_login"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/button_login"
                 android:layout_width="125dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/capsule_button"
                 android:backgroundTint="@color/colorThemeBlue"
                 android:foreground="@drawable/ripple_bg_button"
@@ -318,23 +318,24 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button"
+                app:layout_constraintStart_toEndOf="@+id/button_logout"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_without_wifi"
+            android:id="@+id/layout_without_wifi_temp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:visibility="visible">
 
             <Button
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/capsule_button"
                 android:backgroundTint="@color/colorThemeBlue"
                 android:text="Connect to wifi"
