--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#44A8FF</color>
+    <color name="colorPrimaryDark">#0D70E1</color>
+    <color name="colorAccent">#15C78D</color>
 
     <color name="blueGrey">#616161</color>
     <color name="blehGrey">#313131</color>
