--- a/app/src/main/res/drawable/curve_bottom_bg.xml
+++ b/app/src/main/res/drawable/curve_bottom_bg.xml
@@ -12,7 +12,12 @@
         android:right="-100dp"
         android:top="-80dp">
         <shape android:shape="oval">
-            <solid android:color="@color/colorPrimary" />
+            <!--<solid android:color="@color/colorPrimary" />-->
+            <gradient
+                android:type="linear"
+                android:angle="90"
+                android:startColor="@color/colorPrimary"
+                android:endColor="@color/colorPrimaryDark" />
         </shape>
     </item>
 </layer-list>
