new onboarding screen :sparkles:

--- a/app/src/main/res/layout/fragment_bottom_sheet_input.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_input.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
+    app:behavior_hideable="true"
+    app:behavior_peekHeight="60dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <LinearLayout
